--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "midtrans-client": "^1.3.1",
     "pg": "^8.7.3",
-    "sequelize": "^6.21.0"
+    "sequelize": "^6.21.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
