--- a/server/config/config.json
+++ b/server/config/config.json
@@ -15,8 +15,12 @@
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
+    "ssl": true,
+    "dialect": "postgres",
+    "protocol": "postgres",
     "dialectOptions": {
       "ssl": {
+        "require": true,
         "rejectUnauthorized": false
       }
     }
